# tgl

./: .gitignore  DATA  README.md  auc_ap.txt  bench_dgl_attention.py  benchmark_appendix_tensor_helper.py  check_if_reverse_added.py  check_watch.sh  compat_data.py  constants.py  data_pipeline_thread.py  df_split.py  down.sh  environment.blackwell-nccl.yml  extract_node_dist.py  fix_REDDIT_dataset.md  for_moon.sh  frost_data.py  gen_graph.py  host.py  layers.py  memorys.py  modules.py  pad_df.py  pyproject.toml  result.txt  run20.sh  run20_128_600.sh  run_frost_vs_tgl_train_new_resweep.sh  run_reference_vs_tgl_train_new_resweep.sh  run_tgl_apan_5seed_avg.sh  run_tgl_apan_5seed_avg_2gpu.sh  run_tgl_grid.sh  run_tgl_jodie_5seed_avg.sh  run_tgl_jodie_5seed_avg_2gpu.sh  run_tgl_jodie_5seed_avg_train_py.sh  run_tgl_seed_sweep.sh  run_tgl_serial_train_one_gpu_sweep.sh  run_tgl_serial_train_sweep.sh  run_tgl_tgn_5seed_avg.sh  (+21 more)
accuracy_experiment/: run_on_gpu_pairs.py  run_on_gpu_pairs.yaml  run_on_one_gpu.py  run_on_one_gpu.yaml
accuracy_experiment/compare_ap_tgl_vs_frost/: 0_run.sh  0_run.yaml  (+2 more)
config/: APAN.yml  DyREP.yml  DySAT.yml  JODIE.yml  TGAT.yml  TGN.yml  gcn.py  jodie.py  readme.yml
exp/: benchmark_timing.sh  parse_timing_logs.py  plot_tgn_lastfm.py  timing_results.csv
experiment/: benchmark_timing.py  benchmark_timing.sh
model/: tgn_gemini.py  tgn_runable.py  tgn_runable_last_fm.py
old_files/: dist.py  memorys_old.py  utils_old.py
scripts/: create_blackwell_nccl_env.sh  patch_dgl_for_blackwell.py  plot_seed_ap_curves.py  summarize_seed_sweep.py  uv-env.sh
(+80 files in other folders)
